--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                <a class="nav-link" href="../index.html">Home</a>
+                <a class="nav-link" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/Productos.html">Productos</a>
+                <a class="nav-link" href="./pages/Productos.html">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+                <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="../pages/Contacto.html">Contacto</a>
+                  <a class="nav-link" href="./pages/Contacto.html">Contacto</a>
                 </li>
             </ul>
           </div>
